completing most of the flow

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 BASE_URL="https://www.10bis.co.il/next/en/"
 ITEM_URL="https://www.10bis.co.il/next/en/restaurants/menu/delivery/26698/shufersal/?dishId=6552647"
+ITEM_PRICE="200.00"
 EMAIL="YOUR_EMAIL_HERE"
 FIRST_NAME="YOUR_FIRST_NAME_HERE"
+USER_DATA_DIR="./profile"
+HEADLESS="True"
+DRY_RUN="True"
