--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,19 @@
-BASE_URL="https://www.10bis.co.il/next/en/"
+# Your 10bis login email
+EMAIL="YOUR_EMAIL_HERE"
+
+# Item configuration (default: ₪200 Shufersal voucher)
 ITEM_URL="https://www.10bis.co.il/next/en/restaurants/menu/delivery/26698/shufersal/?dishId=6552647"
 ITEM_PRICE="200.00"
-EMAIL="YOUR_EMAIL_HERE"
+
+# Browser settings
+HEADLESS="True"  # Run browser in background (no window)
+
+# Safety settings
+DRY_RUN="True"  # Set to False to actually place orders
+
+# Debug mode (shows detailed logs)
+DEBUG="False"
+
+# Advanced settings (usually don't need to change these)
+BASE_URL="https://www.10bis.co.il/next/en/"
 USER_DATA_DIR="./profile"
-HEADLESS="True"
-DRY_RUN="True"
